@@ -6,5 +6,5 @@
 #rules-table tbody td.control a,
 #actions-table tbody td.control a
 {
-  background-image: url(icons.png);
+  background-image: url(icons.gif);
 }
